--- a/main.css
+++ b/main.css
@@ -25,7 +25,10 @@ header {
   justify-content: space-between;
 }
 header div {
-  width: 50%; 
+  width: 50%;
+}
+header img {
+  height: 35px;
 }
 #navOptions {
   display: flex;
@@ -284,6 +287,7 @@ main section {
 .publishedTweet {
   color: black;
   white-space: pre-wrap;
+  word-break: break-all;
 }
 .interactOptions {
   width: 50%;
