--- a/main.css
+++ b/main.css
@@ -27,6 +27,9 @@ header {
 header div {
   width: 50%;
 }
+header img {
+  height: 35px;
+}
 #navOptions {
   display: flex;
   flex-direction: row;
